fix: :bug: overflow x fix on small devices

--- a/src/assets/base/_base.scss
+++ b/src/assets/base/_base.scss
@@ -78,3 +78,9 @@ body {
     font-size: 100%; // 16px
   }
 }
+
+@include respond-to(sm) {
+  body {
+    overflow-x: hidden;
+  }
+}
